# arena-demand-scout

./: .gitignore  Makefile  build.py  pyproject.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-03-31-arena-demand-scout.md
docs/superpowers/specs/: 2026-03-31-arena-demand-scout-design.md
site/: index.html
site/css/: style.css
site/data/: sa2_scores.json  state_market.json
site/js/: app.js  charts.js  map.js
src/: compute_sa2_scores.py  compute_scores.py  compute_state_market.py  fetch_abs.py  fetch_sa2.py  scrape_arena.py
src/data/: arena_portfolio_source.json  postcode_to_sa2.json  sa2_childcare_supply.json  sa2_population_source.json
tests/: conftest.py  test_build.py  test_compute_sa2_scores.py  test_compute_scores.py  test_compute_state_market.py  test_e2e.py  test_fetch_abs.py  test_fetch_sa2.py  test_scrape_arena.py
tests/fixtures/: create_test_xlsx.py
